Fixing sorting z-index - covered by 'sold' text

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -9,6 +9,7 @@
         display:flex;
         align-items:center;
         font-size:$s-size;
+        z-index:10;
 
     }
     .dropdown-item:active{
